frontend study diary 04.11.2022

--- a/frontend.html
+++ b/frontend.html
@@ -23,7 +23,7 @@
             target="_blank">Основы CSS для Начинающих (в 2022)</a>. Да, я пока не умею делать
         меню и всякие штуки, но вот уже сделал самопальный портал как набор страниц и подключил 
         простенький файл стилей. Вести такой "дневник" - конечно геморрой) зато если ежедневно работать
-        в среде разработки и постоянно допиливать существующий набор страниц, то есть шанс, что изучение
+        со средой разработки и постоянно допиливать существующий набор страниц, то есть шанс, что изучение
         сдвинется с мертвой точки. Ранее установил VSCode с плагином LiveServer.
     </p>
 
@@ -37,10 +37,45 @@
         Вот это видео - важнейший пока методологический роадмэп, который я нашел. Не буду умничать и пройду пошагово эти инструкции:
     </p>
 
+    <p>Итак, план изучения фронтэнда по Сереге Дмитриевскому:</p>
+
+    <ol>
+        <li>jj</li>
+    </ol>
+
     <p style="color: red;">
         Что меня сейчас больше всего волнует: как делать красные строки-абзацы? как сделать пароль на страницу? как сделать сквозное меню навигации? как выложить сайт в интернет, 
         чтобы можно было читать с любого устройства? ну и конечно как сделать базу данных? чтобы писать записи прям на сайте и они сохранялись в БД.
     </p>
+
+    <h2>04.11.2022</h2>
+
+    <p>Сегодня изучаю работу с Гитом. Ну капец какая камасутра. Намучился с этими SSH-ключами, но в итоге все заработало! Перенес
+        весь вчерашний проект в репозиторий и сегодня уже работаю через гит, подключенный к VSCode. Создал ветку dev и в ней работаю. 
+        Ну капец я красавчик! 
+        Вот мой адрес репозитория: git@github.com:Potishny/myspace.git
+    </p>
+
+    <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ng4hke6op-w" title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+
+    <p>Основные команды Git:</p>
+
+    <ul>
+        <li>git clone [адрес]: клонирование (скачивание) папки проекта из репозитория на локальную машину</li>
+        <li>git pull: синхронизация локальной папки с сервером</li>
+        <li>git checkout: проверка активной ветки</li>
+        <li>git checkout dev/master:  переключение между ветвями</li>
+        <li>git status: проверка статуса изменений</li>
+        <li>git add [файл]: добавление файла в статус trackked</li>
+        <li>git commit -m 'comment': синхронизация изменений</li>
+        <li>git push: публикация изменений - запись измененных файлов в репозиторий</li>
+        <li><a href="https://git-scm.com/book/ru/v2/%D0%9F%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B5-
+            C%3A-%D0%9A%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D1%8B-Git-%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D1%8B%D0%B5-
+            %D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D1%8B" target="_blank">Справочник </a>основных команд Git</li>
+    </ul>
 
 </body>
 </html>
