frontend study diary

--- a/frontend.html
+++ b/frontend.html
@@ -40,7 +40,32 @@
     <p>Итак, план изучения фронтэнда по Сереге Дмитриевскому:</p>
 
     <ol>
-        <li>jj</li>
+        <li>Создать и подключить экосистему Гита: установить Git, изучить основные команды Git,
+            создать репозиторий на GitHub, сделать Hello World на HTML, опубликовать страничку
+            на GitHub Pages.
+        </li>
+        <li>Выбрать макет для верстки на Figma</li>
+        <li>Реализовать структуру сайта: изучить теги HTML, изучить селекторы и правила CSS, 
+            изучить методологию БЭМ и правила именования классов, разбить макет на блоки, подключить reset.css,
+            сверстать структуру и базовое отображение для десктопа, опубликовать на GitHub Pages.
+        </li>
+        <li>Интерактив сайта: Изучить основы JS, выбрать элементы на странице и модифицировать их,
+            подключить на страницу интерактивные элементы - слайдер, попап и т.д.
+        </li>
+        <li>Соответствие сайта макету, корректность отображения во всех браузерах и устройствах:
+            изучить медиа-queries, изучение резиновой верстки, проверка на pixel perfect, проверка на разных устройствах,
+            на всех браузерах.
+        </li>
+        <li>Оптимизация работы сайта: оптимизация кода, изображений, автоматизация оптимизации, 
+            измерение эффективности работы сайта.
+        </li>
+        <li>
+            Улучшение структуры кода: есть ли повторяющийся код в проекте?, легкость поддержки и доработки кода: 
+            шаблонизация, css препроцессоры, линтинг кода, автоматизация сборки, документация на код.
+        </li>
+        <li>
+            Сделать 3 таких проекта в портфолио.
+        </li>
     </ol>
 
     <p style="color: red;">
@@ -76,6 +101,10 @@
             C%3A-%D0%9A%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D1%8B-Git-%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D1%8B%D0%B5-
             %D0%BA%D0%BE%D0%BC%D0%B0%D0%BD%D0%B4%D1%8B" target="_blank">Справочник </a>основных команд Git</li>
     </ul>
+
+    <a href="https://potishny.github.io/myspace/index.html" target="_blank">Мой внутренний поратл, опубликованный на GitHub Pages</a>
+
+    <div></div>
 
 </body>
 </html>
