--- a/diary.html
+++ b/diary.html
@@ -13,21 +13,25 @@
 
     <h1>Несекретные материалы</h1>
 
+    <h2>02.11.2022</h2>
+
     <p>
-        02.11.2022: Вчера вот нормально поработал на доставке, заработал 2500. 
+        Вчера вот нормально поработал на доставке, заработал 2500. 
         А сегодня шляпа - меньше 1000. Сложилась в голове картинка, что работа 
         в ЭФКО - не самый скверный вариант. Необходимо просто взять и выписать 
         все плюсы и минусы увольнения.
     </p>
 
+    <h2>03.11.2022</h2>
+
     <p>
-        03.11.2022: Ну вот, наконец, я начал изучать фронтэнд. 
+        Ну вот, наконец, я начал изучать фронтэнд. 
         Получил в руки гвозди с молотком и, чтобы ежедневно 
         тренироваться в написании кода и изучать функционал, 
         решил вести все свои заметки на вот таком самопальном портале.
     </p>
 
-    <p>04.11.2022</p>
+    <h2>05.11.2022</h2>
 
 </body>
 </html>
