--- a/index.html
+++ b/index.html
@@ -11,36 +11,18 @@
 
     <h1>Хоумпейдж</h1>
 
-    <p>Зачем я это сделал? Осваиваю 
-        новую профессию - фронтэнд. 
-        Чтобы научиться - нужно ежедневно
-        писать код. В качестве тренировок я 
-        буду вести все свои заметки в 
-        таком вот странном виде.
+    <p>Зачем я это сделал?<br> <strong>Осваиваю новую профессию - frontend.</strong> <br>
+        Главное - практика, поэтому чтобы научиться писать код, я буду <em>ежедневно тренироваться в среде разработки и вести этот портал.</em> 
     </p>
 
     <h2>Основные темы:</h2>
 
     <ul>
-        <li>
-            <a href="./diary.html">Мой дневник</a> 
-        </li>
-
-        <li>
-            <a href="./politics.html"> История и политика</a>
-        </li>
-
-        <li>
-            <a href="./efko.html">Работа - ЭФКО</a>
-        </li>
-
-        <li>
-            <a href="./frontend.html">Обучение фронтэнду</a>
-        </li>
-
-        <li>
-            <a href="">Что-то еще</a>
-        </li>
+        <li><a href="./diary.html">Мой дневник</a></li>
+        <li><a href="./politics.html"> История и политика</a></li>
+        <li><a href="./efko.html">Работа - ЭФКО</a></li>
+        <li><a href="./frontend.html">Обучение фронтэнду</a></li>
+        <li><a href="">Что-то еще</a></li>
     </ul>
 
 </body>
