index ref and img

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1>Хоумпейдж</h1>
 
-    <p>Зачем я это сделал?<br> <strong>Осваиваю новую профессию - frontend.</strong> <br>
+    <p>Зачем я это сделал? <strong>Осваиваю новую профессию - frontend.</strong> <br>
         Главное - практика, поэтому чтобы научиться писать код, я буду <em>ежедневно тренироваться в среде разработки и вести этот портал.</em> 
     </p>
 
