--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
 
+    <img src="./img/home.jpg" alt="Хоумпейдж" width="100px">
     <h1>Хоумпейдж</h1>
 
     <p>Зачем я это сделал? <strong>Осваиваю новую профессию - frontend.</strong> <br>
         Главное - практика, поэтому чтобы научиться писать код, я буду <em>ежедневно тренироваться в среде разработки и вести этот портал.</em> 
     </p>
+
+    <div>
+        <input type="text" placeholder="Пока нерабочее поле">
+        <button>Пока нерабочая кнопка</button>
+    </div>
 
     <h2>Основные темы:</h2>
 
