--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,10 @@
     <link rel="stylesheet" href="./style.css">
     <title>Мой внутренний портал</title>
 </head>
-<body>
 
+<body>
     <img src="./img/home.jpg" alt="Хоумпейдж" width="100px">
+
     <h1>Хоумпейдж</h1>
 
     <p>Зачем я это сделал? <strong>Осваиваю новую профессию - frontend.</strong> <br>
@@ -28,8 +30,9 @@
         <li><a href="./politics.html"> История и политика</a></li>
         <li><a href="./efko.html">Работа - ЭФКО</a></li>
         <li><a href="./frontend.html">Обучение фронтэнду</a></li>
-        <li><a href="">Что-то еще</a></li>
+        <li><a href="">Что-то еще)</a></li>
     </ul>
 
 </body>
+
 </html>
