--- a/index.html
+++ b/index.html
@@ -10,9 +10,30 @@
 </head>
 
 <body>
-    <img src="./img/home.jpg" alt="Хоумпейдж" width="100px">
+    <header>
+        <div class="header">
+            <a href="./index.html">Хоумпейдж</a>
+            <nav>
+                <ul class="nav">
+                    <li class="nav__item">
+                        <a href="./diary.html" class="nav__btn">Дневник</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./politics.html" class="nav__btn">Политика</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./frontend.html" class="nav__btn">Фронтэнд</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./efko.html" class="nav__btn">Эфко</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <h1>Хоумпейдж</h1>
+    
 
     <p>Зачем я это сделал? <strong>Осваиваю новую профессию - frontend.</strong> <br>
         Главное - практика, поэтому чтобы научиться писать код, я буду <em>ежедневно тренироваться в среде разработки и вести этот портал.</em> 
@@ -22,16 +43,6 @@
         <input type="text" placeholder="Пока нерабочее поле">
         <button>Пока нерабочая кнопка</button>
     </div>
-
-    <h2>Основные темы:</h2>
-
-    <ul>
-        <li><a href="./diary.html">Мой дневник</a></li>
-        <li><a href="./politics.html"> История и политика</a></li>
-        <li><a href="./efko.html">Работа - ЭФКО</a></li>
-        <li><a href="./frontend.html">Обучение фронтэнду</a></li>
-        <li><a href="">Что-то еще)</a></li>
-    </ul>
 
 </body>
 
