--- a/diary.html
+++ b/diary.html
@@ -8,8 +8,27 @@
     <title>Мой дневник</title>
 </head>
 <body>
-    
-    <a href="./index.html">Назад на хоумпейдж</a>
+    <header>
+        <div class="header">
+            <a href="./index.html">Хоумпейдж</a>
+            <nav>
+                <ul class="nav">
+                    <li class="nav__item">
+                        <a href="./diary.html" class="nav__btn">Дневник</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./politics.html" class="nav__btn">Политика</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./frontend.html" class="nav__btn">Фронтэнд</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./efko.html" class="nav__btn">Эфко</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <h1>Несекретные материалы</h1>
 
