class refactoring header

--- a/pass.html
+++ b/pass.html
@@ -8,10 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <a href="./index.html">Назад на хоумпейдж</a>
+    <header>
+        <div class="header">
+            <a href="./index.html">Хоумпейдж</a>
+            <nav>
+                <ul class="nav">
+                    <li class="nav__item">
+                        <a href="./diary.html" class="nav__btn">Дневник</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./politics.html" class="nav__btn">Политика</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./frontend.html" class="nav__btn">Фронтэнд</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./efko.html" class="nav__btn">Эфко</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <h1>Пароли</h1>
+    <h1>Мои пароли</h1>
 
     <ul>
         <li>Pnz: wf}~9*AL|c2tJ60L</li>
