--- a/frontend.html
+++ b/frontend.html
@@ -8,10 +8,29 @@
     <title>Осваиваем фронтэнд</title>
 </head>
 <body>
-    
-    <a href="./index.html">Назад на хоумпейдж</a>
+    <header>
+        <div class="header">
+            <a href="./index.html">Хоумпейдж</a>
+            <nav>
+                <ul class="nav">
+                    <li class="nav__item">
+                        <a href="./diary.html" class="nav__btn">Дневник</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./politics.html" class="nav__btn">Политика</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./frontend.html" class="nav__btn">Фронтэнд</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="./efko.html" class="nav__btn">Эфко</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <h1>Осваиваем фронтэнд</h1>
+    <h1>Изучаю frontend</h1>
 
     <h2>03.11.2022</h2>
 
